--- a/app/index.html
+++ b/app/index.html
@@ -53,13 +53,63 @@
 					<div class="b-header__icons-container b-header-icons">
 						<a href="#" class="b-header-icons__link"><i class="fas fa-search"></i></a>
 						<a href="#" class="b-header-icons__link"><i class="far fa-user-circle"></i></a>
-						<a href="#" class="b-header-icons__link"><i class="far fa-star"></i></a>
-						<a href="#" class="b-header-icons__link"><i class="fas fa-shopping-bag"></i></a>
+						<a href="#" class="b-header-icons__link active"><i class="far fa-star"></i><span class="b-header-icons__link-count">3</span></a>
+						<a href="#" class="b-header-icons__link"><i class="fas fa-shopping-bag"></i><span class="b-header-icons__link-count">3</span></a>						
 					</div>
+
+							<div class="b-topmenu__dropdown favorites" style="display: none;">
+								<div class="b-topmenu__favorites-container d-flex">	
+									<div class="b-topmenu__favorites-imgblock">
+										<img src="img/shop/shop_item.png" alt="shop_item" class="b-topmenu__favorites-img">
+									</div>
+									<div class="b-topmenu__favorites-desc">
+										<a href="#" class="b-topmenu__favorites-close"></a>
+										<a href="#" class="b-topmenu__favorites-link blue_link">Композитная черепица MetroGallo красный</a>
+										<div class="b-topmenu__favorites-quantity">100 шт <span class="b-topmenu__favorites-eachprice">890 ₽/шт</div>
+										<div class="b-topmenu__favorites-price">89 000 <span class="ruble">₽</span></div>
+									</div>	
+								</div>
+								<div class="b-topmenu__favorites-container d-flex">	
+									<div class="b-topmenu__favorites-imgblock">
+										<img src="img/shop/shop_item.png" alt="shop_item" class="b-topmenu__favorites-img">
+									</div>
+									<div class="b-topmenu__favorites-desc">
+										<a href="#" class="b-topmenu__favorites-close"></a>
+										<a href="#" class="b-topmenu__favorites-link blue_link">Композитная черепица MetroGallo красный</a>
+										<div class="b-topmenu__favorites-quantity">100 шт <span class="b-topmenu__favorites-eachprice">890 ₽/шт</div>
+										<div class="b-topmenu__favorites-price">89 000 <span class="ruble">₽</span></div>
+									</div>	
+								</div>
+								<div class="b-topmenu__favorites-pages">
+									<a href="#" class="b-topmenu__favorites-pagelink active"></a>
+									<a href="#" class="b-topmenu__favorites-pagelink"></a>
+									<a href="#" class="b-topmenu__favorites-pagelink"></a>
+									<a href="#" class="b-topmenu__favorites-pagelink"></a>
+								</div>
+								<a class="b-topmenu__favorites-button button buy">Перейти к избранному</a>
+							</div>
+
+							<div class="b-topmenu__dropdown login">
+								<div class="b-topmenu__login-container">
+									<div class="b-topmenu__login-title gradient text">Войти</div><a href="#" class="b-topmenu__login-registration blue_link">Регистрация</a>
+								</div>
+								<form class="b-calc" action="b-search">
+									<div class="b-topmenu__login-container">
+										<label for="" class="b-topmenu__login-label">E-mail</label>
+										<input class="b-calc__form-input b-topmenu__login-input" type="text" placeholder="ulala_andreeva@mail.ru" />
+									</div>
+									<div class="b-topmenu__login-container">
+										<label for="" class="b-topmenu__login-label">Пароль</label>
+										<input class="b-calc__form-input b-topmenu__login-input" type="password"/>
+									</div>
+									<a class="b-topmenu__login-forgot blue_link" href="#">Забыли свой пароль?</a>
+								<button type="submit" class="b-topmenu__favorites-button button buy">Войти</button>
+								</form>
+							</div>
 				</div>
 			</div>
 		</div>
-							<div class="b-topmenu__dropdown">
+							<div class="b-topmenu__dropdown" style="display: none;">
 								<div class="container">
 									<div class="row">
 										<div class="col-md-3">
@@ -114,8 +164,89 @@
 													</div>
 												</div>
 											</div>
+											<div class="b-topmenu__banner" style="background-image: url(img/topmenu_banner.jpg);">
+												<div class="b-topmenu__banner-container after">
+													<div class="b-topmenu__banner-title gradient">metrotile i-series</div>
+													<div class="b-topmenu__banner-text">
+														Новейшая коллекция созданная с учетом самых передовых тенденций в современной архитектуре. 
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
+								</div>
+							</div>
+							<div class="b-topmenu__dropdown" style="display: none;">
+								<div class="container">
+									<div class="row">
+										<div class="col-md-2">
+											<div class="b-topmenu__dropdown-menu">
+												<a href="" class="b-topmenu__dropdown-linktitle">О компании</a>
+												<a href="" class="b-topmenu__dropdown-link">История</a>
+												<a href="" class="b-topmenu__dropdown-link">Производство</a>
+												<a href="" class="b-topmenu__dropdown-link">Сертификаты</a>
+												<a href="" class="b-topmenu__dropdown-link">Вакансии</a>
+												<a href="" class="b-topmenu__dropdown-link">Преимущества</a>
+												<a href="" class="b-topmenu__dropdown-link">Технология</a>
+												<a href="" class="b-topmenu__dropdown-link">Фотогалерея</a>
+											</div>
+											<div class="b-topmenu__dropdown-menu">
+												<a href="" class="b-topmenu__dropdown-linktitle">Партнерство</a>
+												<a href="" class="b-topmenu__dropdown-link">Дилерам</a>
+												<a href="" class="b-topmenu__dropdown-link">Строителям</a>
+												<a href="" class="b-topmenu__dropdown-link">Архитекторам</a>
+											</div>
+										</div>
+										<div class="col-md-2">
+											<div class="b-topmenu__dropdown-menu">
+												<a href="" class="b-topmenu__dropdown-linktitle">Учебный центр</a>
+												<a href="" class="b-topmenu__dropdown-link">Шеф-монтаж</a>
+												<a href="" class="b-topmenu__dropdown-link">Инструкция</a>
+												<a href="" class="b-topmenu__dropdown-link">Видео обучение</a>
+												<a href="" class="b-topmenu__dropdown-link">Семинары</a>
+											</div>
+											<div class="b-topmenu__dropdown-menu">
+												<a href="" class="b-topmenu__dropdown-linktitle">Пресс центр</a>
+												<a href="" class="b-topmenu__dropdown-link">Новости</a>
+												<a href="" class="b-topmenu__dropdown-link">Публикации</a>
+												<a href="" class="b-topmenu__dropdown-link">Отзывы</a>
+												<a href="" class="b-topmenu__dropdown-link">Вопрос-ответ</a>
+											</div>
+										</div>
+										<div class="offset-md-2 col-md-3">
+											<div class="b-topmenu__banner" style="background-image: url(img/topmenu_banner.jpg);">
+												<div class="b-topmenu__banner-container">
+													<div class="b-topmenu__banner-title gradient">композитная черепица MetroBond</div>
+													<div class="b-topmenu__banner-buy">
+														от 494 р/шт <button class="b-topmenu__banner-button">Купить</button>	
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-md-3">
+											<div class="b-topmenu__banner" style="background-image: url(img/topmenu_banner.jpg);">
+												<div class="b-topmenu__banner-container after">
+													<div class="b-topmenu__banner-title gradient">metrotile i-series</div>
+													<div class="b-topmenu__banner-text">
+														Новейшая коллекция созданная с учетом самых передовых тенденций в современной архитектуре. 
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="b-topmenu__dropdown search" style="display: none;">
+								<div class="container b-calc">
+									<form class="row align-items-center">
+										<div class="offset-2 col-8">
+											<div class="b-search__input"><input class="b-calc__form-input" placeholder="Черепица" type="text"></div>
+										</div>
+										<div class="col-1">
+											<div class="b-search__button button buy">найти</div>
+										</div>
+										<div class="b-topmenu__dropdown-close"></div>
+									</form>
 								</div>
 							</div>
 	</header>
