--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
 
 	<!-- Custom HTML -->
 	<header class="b-header align-items-center">
+		<div class="humb"><div class="humb_lines"><div class="humb_lines_line"></div></div></div>
 		<div class="container">
 			<div class="row">
 				<div class="b-header__menu b-topmenu col-md-4 d-flex align-items-center">
