--- a/app/index.html
+++ b/app/index.html
@@ -34,14 +34,12 @@
 
 	<!-- Custom HTML -->
 	<header class="b-header align-items-center">
-		<div class="humb"><div class="humb_lines"><div class="humb_lines_line"></div></div></div>
+		<a href="#" class="humb"><div class="humb_lines"><div class="humb_lines_line"></div></div></a>
 		<div class="container">
-			<div class="row">
-				<div class="b-header__menu b-topmenu col-md-4 d-flex align-items-center">
+			<div class="row align-items-center">
+				<div class="b-header__menu b-topmenu col-md-4">
 					<ul class="b-topmenu__list">
-						<li class="b-topmenu__item">
-							<a href="#" class="b-topmenu__link">О компании</a>
-						</li>
+						<li class="b-topmenu__item"><a href="#" class="b-topmenu__link">О компании</a></li>
 						<li class="b-topmenu__item"><a href="#" class="b-topmenu__link">Каталог</a></li>
 						<li class="b-topmenu__item"><a href="#" class="b-topmenu__link">Где купить</a></li>
 					</ul>
@@ -54,7 +52,7 @@
 					<div class="b-header__icons-container b-header-icons">
 						<a href="#" class="b-header-icons__link"><i class="fas fa-search"></i></a>
 						<a href="#" class="b-header-icons__link"><i class="far fa-user-circle"></i></a>
-						<a href="#" class="b-header-icons__link active"><i class="far fa-star"></i><span class="b-header-icons__link-count">3</span></a>
+						<a href="#" class="b-header-icons__link"><i class="far fa-star"></i><span class="b-header-icons__link-count">3</span></a>
 						<a href="#" class="b-header-icons__link"><i class="fas fa-shopping-bag"></i><span class="b-header-icons__link-count">3</span></a>						
 					</div>
 
@@ -90,7 +88,7 @@
 								<a class="b-topmenu__favorites-button button buy">Перейти к избранному</a>
 							</div>
 
-							<div class="b-topmenu__dropdown login">
+							<div class="b-topmenu__dropdown login" style="display: none;">
 								<div class="b-topmenu__login-container">
 									<div class="b-topmenu__login-title gradient text">Войти</div><a href="#" class="b-topmenu__login-registration blue_link">Регистрация</a>
 								</div>
@@ -272,7 +270,7 @@
 	<section class="gutter_bottom">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-lg-6 col-md-7">
 					<h2 class="gradient text">Композитная<br> кровля из Бельгии</h2>
 					<div class="fz18">Компания Metroline является официальным дилером бельгийского концерна "Metroline Europe NV" в России. Высокое качество композитной кровли, цена от прямого производителя Metroline - два аргумента, чтобы сделать правильный выбор.</div>
 					<div class="b-stats b-stats__gutter d-flex">
@@ -287,10 +285,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="b-features offset-md-2 col-md-4">
+				<div class="b-features offset-lg-2 col-md-5">
 					<div class="b-features__container">
 						<ul class="b-features__list">
-							<li class="b-features__list-item first"><span class="b-features__text-title">Пожаробезопасность</span><span  class="b-features__text">Высокая стойкость<br> к открытому огню</span></li>
+							<li class="b-features__list-item first"><span class="b-features__list-title">Пожаробезопасность</span><span  class="b-features__text">Высокая стойкость<br> к открытому огню</span></li>
 							<li class="b-features__list-item scnd"><span class="b-features__list-title">Бесшумность</span><span  class="b-features__text">Кровля Метротайл не шумит<br> при дожде и граде</span></li>
 							<li class="b-features__list-item thrd"><span class="b-features__list-title">Красота</span><span  class="b-features__text">Гранулят натурального камня<br> придаёт красоту <br>
 и респектабельность</span></li>
@@ -443,12 +441,12 @@
 и взаимовыгодным!</div>
 				</div>
 				<div class="col-md-4">
-					<div>Выбирайте любое цветовое решение <br> 
+					<div class="b-professionals__desc">Выбирайте любое цветовое решение <br> 
 и купить композитную металлочерепицу, <br> 
 оставив заявку на нашем сайте.</div>
 				</div>
 				<div class="col-md-4">
-					<div>Высокое качество материалов,<br>   бельгийскаятехнология и выгодные<br>  условия сотрудничества.</div>
+					<div class="b-professionals__desc">Высокое качество материалов,<br>   бельгийскаятехнология и выгодные<br>  условия сотрудничества.</div>
 				</div>
 			</div>
 			<div class="row">
@@ -465,6 +463,8 @@
 					<a class="b-professionals__desc-link" href="#">Условия</a>
 				</div>
 			</div>
+		</div>
+		<div class="container mobilefluid">
 			<div class="row gutter_top">
 				<div class="col-12">
 					<div class="b-midbanner">
@@ -473,13 +473,13 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="container">
 			<div class="row gutter_top gutter_bottom">
-				<div class="col-md-3">
-						<h2 class="gradient text no_border gutter_no">Композитная<br>кровля<br>Metrotile</h2>
+				<div class="b-intro__about col-md-3">
+						<h2 class="gradient text no_border gutter_no">Композитная <br>кровля <br>Metrotile</h2>
 				</div>
 					<div class="offset-md-1 col-md-8">Образовавшись в 1997 году, «Metrotile Europe NV» очень быстро набрала мировую популярность. Композитной черепицей Metrotile покрыто более 4 млн. кв. м, в 85 странах мира.  Остановив свой выбор на Metrotile,  Вы приобретаете европейское качество по доступной стоимости. </div>
-				</div>
-
 			</div>
 		</div>
 	</section>
@@ -489,8 +489,10 @@
 					<div class="col-12">
 					<div class="b-news__tabs">
 						<a class="b-news__tabs-link active" href="#">Новости</a>
-						<a class="b-news__tabs-link" href="#">Акции</a>
-						<a class="b-news__tabs-link" href="#">Публикации</a>
+						<div class="b-news__tabs-container">
+							<a class="b-news__tabs-link" href="#">Акции</a>
+							<a class="b-news__tabs-link" href="#">Публикации</a>	
+						</div>
 					</div>
 					<div id="wideslider_counter3" class="counter"></div>
 					<div id="wideslider3" class="owl-carousel wideslider">
@@ -741,11 +743,18 @@
 					</div>
 					</div>
 					</div>
-					</div>		
+					<div class="b-intro__dots container">
+						<div class="row">
+							<div class="col-12"><div id="customDots2" class="b-intro__dot owl-dots"></div></div>
+						</div>
+					</div>					
+					</div>
+
+		
 	</section>
 	<section class="b-seo">
 		<div class="container">
-			<div class="row align-items-center">
+			<div class="row">
 				<div class="col-md-7">
 					<div class="b-seo__title gradient text">«Пятый фасад» вашего дома</div>
 					<div class="b-seo__block">
@@ -755,15 +764,15 @@
 					<p>Композитная кровля Metrotile идеально подходит для обустройства крыш загородных коттеджей, роскошных вилл и дачных домов, а элегантная фактура металлочерепицы Metrotile нередко используется при реставрации исторических зданий. Узнать цены на композитную металлочерепицу вы можете онлайн на нашем сайте или же по телефону +7 495 363 44 32.</p>
 					</div>
 				</div>
-				<div class="offset-md-1 col-md-4 b-seo__image" style="background: url(img/seo_text_pic.png) no-repeat;">
+				<div class="offset-lg-1 col-lg-4 col-md-5 b-seo__image" style="background: url(img/seo_text_pic.png) no-repeat;">
 					<div class="b-seo__container"></div>
 				</div>
 			</div>
 			<div class="row">
-					<div class="col-md-8 b-seo__image"  style="background: url(img/seo_text_frame.png) no-repeat;">	
+					<div class="b-seo__image col-lg-8 col-md-7 order-sm-last"  style="background: url(img/seo_text_frame.png) no-repeat;">	
 							<div class="b-seo__container"></div>
 					</div>
-					<div class="col-md-4 d-flex align-items-center justify-content-center">
+					<div class="col-lg-4 col-md-5 d-flex align-items-center justify-content-center">
 						<div class="b-seo__block-gradient">
 						</div>
 							<div class="b-seo__block">
@@ -771,7 +780,7 @@
 							</div>	
 					</div>
 			</div>
-			<div class="row align-items-center">
+			<div class="row">
 				<div class="col-md-7">
 					<div class="b-seo__title gradient text">Особенности композитной кровли Metrotile</div>
 					<div class="b-seo__block">
@@ -784,7 +793,7 @@
 						<div class="col-12 d-flex justify-content-start"><div class="button buy buy2">Перейти в каталог</div></div>
 					</div>					
 				</div>
-				<div class="offset-md-1 col-md-4 b-seo__image" style="background: url(img/seo_text_pic2.png) no-repeat;">
+				<div class="offset-lg-1 col-lg-4 col-md-5 b-seo__image" style="background: url(img/seo_text_pic2.png) no-repeat;">
 					<div class="b-seo__container"></div>
 				</div>
 			</div>
@@ -867,6 +876,99 @@
 			</div>
 			</div>
 		<a href="#" class="footer__up">наверх</a>
+	</footer>
+	<footer class="footer__mobile gradient_bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="footer__mobile-social social">
+						<a class="social__link" href="#"><i class="demo-icon icon-inst"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-vk"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-facebook"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-vimeo"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-youtube"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-gplus"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<a data-fancybox data-type="ajax" data-src="call.html" href="#" class="footer__mobile-button button buy">Оставить заявку</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<div class="footer__mobile-menu">
+							<div class="footer__mobile-dropdown">О компании</div>
+							<div class="footer__mobile-links">
+								<a class="footer__mobile-link" href="#">Партнерство</a>
+								<a class="footer__mobile-link" href="#">Учебный центр</a>
+								<a class="footer__mobile-link" href="#">Пресс центр</a>
+								<a class="footer__mobile-link" href="#">Где купить</a>
+								<a class="footer__mobile-link" href="#">Контакты</a>
+								<a class="footer__mobile-link" href="#">Монтаж</a>
+								<a class="footer__mobile-link" href="#">Расчет черепицы</a>
+								<a class="footer__mobile-link" href="#">Акции</a>
+								<a class="footer__mobile-link" href="#">Карта сайта</a>	
+							</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<div class="footer__mobile-menu">
+							<div class="footer__mobile-dropdown">Каталог</div>
+							<div class="footer__mobile-links">
+								<a class="footer__mobile-link" href="#">— MetroBond</a>
+								<a class="footer__mobile-link" href="#">— MetroRoman </a>
+								<a class="footer__mobile-link" href="#">— Metrotile Mistral</a>
+								<a class="footer__mobile-link" href="#">— MetroShake II</a>
+								<a class="footer__mobile-link" href="#">— MetroClassic</a>
+								<a class="footer__mobile-link" href="#">— Metrotile Gallo</a>
+								<a class="footer__mobile-link" href="#">— Metrotile Romana</a>
+								<a class="footer__mobile-link" href="#">— MetroViksen</a>
+								<a class="footer__mobile-link" href="#">— MetroCooper</a>
+								<a class="footer__mobile-link" href="#">— Aquapan</a>	
+							</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<div class="footer__mobile-menu border_bottom">
+							<div class="footer__mobile-dropdown">Где купить</div>
+							<div class="footer__mobile-links"></div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+						<b class="footer__mobile-title">Контакты</b>
+						<div class="footer__mobile-container">
+							<a class="footer__mobile-phone" href="tel:74953634432">+7 (495) 363 44 32</a>;
+							<a class="footer__mobile-phone" href="tel:74957874760">+7 (495) 787 47 60</a>
+						</div>
+						<a class="footer__mobile-email" href="mailto:company@metrotile.ru">company@metrotile.ru</a>
+				</div>
+			</div>
+		</div>
+		<form action="" class="container">
+			<div class="row">
+				<div class="col-12">
+					<input class="footer__contacts-subscribe" placeholder="Подпишитесь на новости"/>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<a href="#" class="footer__mobile-button button buy">Подписаться</a>
+				</div>
+			</div>
+		</form>
+			<div class="footer__mobile-bottom clearfix">
+						<div class="footer__mobile-rights">© 2014 METROTILE</div>
+						<a href="#" class="footer__mobile-webprofy">сделано в webprofy</a>
+			</div>
+		
 	</footer>
 	<script src="js/scripts.min.js"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
