--- a/app/index.html
+++ b/app/index.html
@@ -540,6 +540,7 @@
 								<span class="b-catalog__item-price">от 586 <span class="ruble">₽</span></span>
 							</div>
 						</div>
+						<div class="b-catalog__item is-fake"></div>
 					</div>
 				</div>
 			</div>
@@ -604,6 +605,7 @@
 								<span class="b-catalog__item-price">от 586 <span class="ruble">₽</span></span>
 							</div>
 						</div>
+						<div class="b-catalog__item is-fake"></div>
 					</div>
 				</div>
 			</div>
@@ -733,6 +735,7 @@
 								<div class="b-news__desc-text">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
 							</div>
 						</div>
+						<div class="b-news__item is-fake"></div>
 					</div>
 							
 						</div>
