--- a/app/collections.html
+++ b/app/collections.html
@@ -221,7 +221,7 @@
           <ul class="b-topmenu__list">
             <li class="b-topmenu__item"><a href="#" class="b-topmenu__link">О компании</a>
 
-              <div class="b-topmenu__dropdown" style="display: none;">
+              <div class="b-topmenu__dropdown" >
                 <div class="container">
                   <div class="row">
                     <div class="col-md-2">
@@ -284,7 +284,7 @@
             </li>
             <li class="b-topmenu__item"><a href="#" class="b-topmenu__link">Каталог</a>
 
-              <div class="b-topmenu__dropdown" style="display: none;">
+              <div class="b-topmenu__dropdown">
                 <div class="container">
                   <div class="row">
                     <div class="col-md-3">
