--- a/app/about.html
+++ b/app/about.html
@@ -462,7 +462,7 @@
 				<div class="row">
 					<div class="col-md-3">
 						<h2 class="b-about__title gradient text no_border">ГАРАНТИИ И СЕРТИФИКАТЫ</h2>
-						<p class="b-about__text margin_top50 margin_bot50">На всю продукцию Метротайл дается письменная гарантия сроком 30 лет. Во избежание подделок требуйте у продавца.</p>
+						<p class="b-about__text warrantymoblie margin_top50 margin_bot50">На всю продукцию Метротайл дается письменная гарантия сроком 30 лет. Во избежание подделок требуйте у продавца.</p>
 						<div class="b-about__waranty"></div>
 					</div>
 					<div class="offset-md-1 col-md-8">
