--- a/app/catalog_additional.html
+++ b/app/catalog_additional.html
@@ -452,44 +452,38 @@
 	<section>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-2">
-					<div class="b-collections">
-						<div class="b-collections__navigation">
-							<div class="b-collections__navigation-head">Коллекции</div>
-							<div class="b-collections__navigation-container">
-								<a href="#" class="b-collections__navigation-link active">MetroBond</a>
-								<a href="#" class="b-collections__navigation-link">MetroRoman</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile Mistral</a>
-								<a href="#" class="b-collections__navigation-link">MetroShake II</a>
-								<a href="#" class="b-collections__navigation-link">MetroClassic</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile Gallo</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile Romana</a>
-								<a href="#" class="b-collections__navigation-link">MetroViksen</a>
-								<a href="#" class="b-collections__navigation-link">MetroCooper</a>
-								<a href="#" class="b-collections__navigation-link">Aquapan</a>
-								<a href="#" class="b-collections__navigation-new gradient">Новинки</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile IPanel</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile ISlate</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile IShake</a>
-								<a href="#" class="b-collections__navigation-link">Metrotile IShingle</a>
-							</div>
-						</div>
-						<div class="b-collections__navigation">
-							<div class="b-collections__navigation-head">Коллекции</div>
-							<div class="b-collections__navigation-container">
-								<a class="b-collections__navigation-link">MetroBond</a>
-							</div>
-						</div>
-					</div>
+				<div class="col-lg-2">
+          <div class="b-collections">
+            <div class="b-collections__navigation">
+              <div class="b-collections__navigation-head">Коллекции</div>
+              <div class="b-collections__navigation-container">
+                <a href="#" class="b-collections__navigation-link active">MetroBond</a>
+                <a href="#" class="b-collections__navigation-link">MetroRoman</a>
+                <a href="#" class="b-collections__navigation-link">Metrotile Mistral</a>
+                <a href="#" class="b-collections__navigation-link">MetroShake II</a>
+                <a href="#" class="b-collections__navigation-link">MetroClassic</a>
+                <a href="#" class="b-collections__navigation-link">Metrotile Gallo</a>
+                <a href="#" class="b-collections__navigation-link">Metrotile Romana</a>
+                <a href="#" class="b-collections__navigation-link">MetroViksen</a>
+                <a href="#" class="b-collections__navigation-link">MetroCooper</a>
+                <a href="#" class="b-collections__navigation-link">Aquapan</a>
+                <a href="#" class="b-collections__navigation-new gradient">Новинки</a>
+                <a href="#" class="b-collections__navigation-link">Metrotile IPanel</a>
+                <a href="#" class="b-collections__navigation-link">Metrotile ISlate</a>
+                <a href="#" class="b-collections__navigation-link">Metrotile IShake</a>
+                <a href="#" class="b-collections__navigation-link">Metrotile IShingle</a>
+              </div>
+            </div>
+          </div>
 				</div>
-				<div class="b-catalog col-md-10">
+				<div class="b-catalog col-lg-10">
 					<div class="row b-catalog__addition align-items-center">
-						<div class="col-md-4">
+						<div class="col-md-4 col-sm-6">
 							<div class="b-catalog__addition-container">
 								<img class="b-catalog__addition-img" src="img/catalod_add_item.png" alt=""/>
 							</div>
 						</div>
-						<div class="col-md-8">
+						<div class="col-md-8 col-sm-6">
 							<div class="b-catalog__addition-info">
 								<a class="b-catalog__addition-link gradient text" href="#" class="">Конек полукруглый</a>
 								<div>— защитит крышу от влаги и физических воздействий и обеспечит вентиляцию и выход воздуха из-под кровельного пространства.</div>
@@ -501,7 +495,7 @@
 						</div>
 					</div>
 					<div class="row b-catalog__addition align-items-center">
-						<div class="col-md-8">
+						<div class="col-md-8 col-sm-6">
 							<div class="b-catalog__addition-info">
 								<a href="#" class="b-catalog__addition-link gradient text" >Конек полукруглый тройной</a>
 								<div>— защитит крышу от влаги и физических воздействий и обеспечит вентиляцию и выход воздуха из-под кровельного пространства.</div>
@@ -511,7 +505,7 @@
 								<button class="button buy">купить</button>
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 col-sm-6">
 							<div class="b-catalog__addition-container">
 								<img class="b-catalog__addition-img" src="img/catalod_add_item2.png" alt=""/>
 							</div>
@@ -519,15 +513,18 @@
 					</div>
 				</div>
 		</div>
-		<div class="row gutter_top">
-				<div class="col-12">
-					<div class="b-midbanner">
-						<div class="b-midbanner__title row justify-content-center">Кровля метротайл — правильный выбор!</div>
-							<div class="row justify-content-center"><a href="#" class="b-midbanner__button button gradient">Получить консультацию</a></div>
-
-					</div>
-				</div>
 		</div>
+    <div class="container mobilefluid">
+    <div class="row gutter_top">
+        <div class="col-12">
+          <div class="b-midbanner">
+            <div class="b-midbanner__title row justify-content-center">Кровля метротайл — правильный выбор!</div>
+            <div class="row justify-content-center"><a href="#" class="b-midbanner__button button gradient">Получить консультацию</a></div>
+          </div>
+        </div>
+    </div>
+    </div>
+    <div class="container">
 			<div class="row align-items-center margin_top100">
 				<div class="col-md-7">
 					<div class="b-seo__title gradient text">«Пятый фасад» вашего дома</div>
@@ -556,7 +553,8 @@
 					<p>Композитная кровля Metrotile идеально подходит для обустройства крыш загородных коттеджей, роскошных вилл и дачных домов, а элегантная фактура металлочерепицы Metrotile нередко используется при реставрации исторических зданий. Узнать цены на композитную металлочерепицу вы можете онлайн на нашем сайте или же по телефону +7 495 363 44 32.</p>
 					</div>
 				</div>
-			</div>			
+			</div>
+    </div>			
 	</section>  <footer class="footer gradient_bg">
     <div class="container">
       <div class="row">
