--- a/app/architects.html
+++ b/app/architects.html
@@ -582,6 +582,7 @@
 							</td>
 						</tr>
 					</table>
+          <a class="b-arch__button button buy">Показать еще</a>
 				</div>
 			</div>
 			</div>
@@ -593,7 +594,7 @@
 					<div class="b-seo__block">
 					<p>Вы разрабатываете архитектурный проект?</p>
 					<p>Предлагаем Вам включить в проект композитную металлочерепицу Metrotile.</p>
-					<ul>
+					<ul class="diamond">
 						<li>Широкий ассортимент из 10 профилей: MetroBond, MetroRoman, MetroShake-II, MetroClassic, MetroViksen, MetroCooper, Aquapan, Metrotile Gallo, Metrotile Mistral и Metrotile Romana создает эффект натуральных кровельных материалов: черепицы, сланца, дранки и не уступает последним ни по надежности, ни по сроку службы (более 50 лет). При этом, композитная черепица Metrotile обладает минимальным весом, около 6,5 кг/м2.</li>
 						<li>Индивидуальность проекта можно подчеркнуть разнообразной гаммой цветов каждого профиля.</li>
 						<li>Объединяя в себе преимущества гибкой черепицы, натуральных кровельных материалов, металлочерепицы, композитная черепица Metrotile технологична в монтаже, что позволяет использовать ее в проектах с кровлями самой сложной геометрической формы.</li>
