--- a/app/for_builder.html
+++ b/app/for_builder.html
@@ -503,6 +503,7 @@
 							</div>
 						</div>
 					</div>
+          <div class="display-sm-block b-topmenu-mobile__button button buy">показать еще</div>
 				</div>
 		</div>
 	</div>
@@ -563,6 +564,7 @@
 							</div>
 						</div>
 					</div>
+          <div class="display-sm-block b-topmenu-mobile__button button buy">показать еще</div>
 				</div>
 		</div>
 	</div>
@@ -576,7 +578,7 @@
 					<p>Небольшой вес листов Metrotile 2,95 кг и оптимальные размеры 1340 мм х 415 мм, широкий ассортимент доборных элементов существенно упрощают монтаж, делают его технологичным и позволяют монтировать кровли сложных геометрических форм. Вы можете посмотреть видеоинструкции прямо сейчас или скачать их в формате mp4 на свой компьютер.</p>
 					<p>Высокое качество материала позволяет, при необходимости, гнуть листы и делать фальц без разрушения верхнего слоя гранулята.</p>
 					<p>Для работы со строителями компания Metrotile разработала специальную программу сотрудничества в которая предусматривает:</p>
-					<ul>
+					<ul class="diamond">
 						<li>накопительную систему скидок;</li>
 						<li>бесплатные консультации и семинары по монтажу кровельного материала Metrotile;</li>
 						<li>расчет материала Metrotile по размерам и расчетам кровли заказчика и помощь в оформлении заказа;</li>
