--- a/app/about.html
+++ b/app/about.html
@@ -466,28 +466,39 @@
 						<div class="b-about__waranty"></div>
 					</div>
 					<div class="offset-md-1 col-md-8">
-						<div class="row">
-						<div class="col-md-4">
-							<a href="#" class="b-about__sertificat">
-								<img class="b-about__sertificat-img" src="img/manual.jpg" alt="manual" />
-								<a class="b-about__sertificat-link" href="#">Гарантийный талон</a>
-							</a>
-							
-						</div>
-						<div class="col-md-4">
-							<a href="#" class="b-about__sertificat">
-								<img class="b-about__sertificat-img" src="img/manual2.jpg" alt="manual" />
-								<a class="b-about__sertificat-link" href="#">Сертификат пожарной безопасности</a>
-							</a>
-						</div>
-						<div class="col-md-4">
-							<a href="#" class="b-about__sertificat">
-								<img class="b-about__sertificat-img" src="img/manual3.jpg" alt="manual" />
-								<a class="b-about__sertificat-link" href="#">Сертификат соответствия продукции требованиям нормативных документов ГОСТ</a>
-							</a>
-						</div>
-							
-						</div>
+            <div class="counter"></div>
+            <div id="wideslider" class="owl-carousel">
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual.jpg" alt="manual" />
+              </a>
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual2.jpg" alt="manual" />
+              </a>
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual3.jpg" alt="manual" />
+              </a>
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual4.jpg" alt="manual" />
+              </a>
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual.jpg" alt="manual" />
+              </a>
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual2.jpg" alt="manual" />
+              </a>
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual3.jpg" alt="manual" />
+              </a>
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual4.jpg" alt="manual" />
+              </a>
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual.jpg" alt="manual" />
+              </a>
+              <a href="#" class="b-otzyvy__sertificat">
+                <img class="b-otzyvy__sertificat-img" src="img/manual2.jpg" alt="manual" />
+              </a>
+              </div>
 					</div>
 				</div>
 		</div>
