--- a/app/catalog_spisok_tovarov.html
+++ b/app/catalog_spisok_tovarov.html
@@ -447,7 +447,7 @@
 	<section>
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-2">
+				<div class="col-md-2">
 					<div class="b-collections">
 						<div class="b-collections__navigation">
 							<div class="b-collections__navigation-head">Коллекции</div>
@@ -469,15 +469,18 @@
 								<a href="#" class="b-collections__navigation-link">Metrotile IShingle</a>
 							</div>
 						</div>
+						<div class="b-collections__navigation">
+							<div class="b-collections__navigation-head">Коллекции</div>
+							<div class="b-collections__navigation-container">
+								<a class="b-collections__navigation-link">MetroBond</a>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="col-lg-10">
-          <div class="b-filter-mobile__wrapper gradient_bg">
-          <div class="b-filter-mobile__title gradient text">Фильтр</div>
-          </div>
+				<div class="col-md-10">
 					<form action="" class="b-filter gradient_bg">
 						<div class="row">
-							<div class="col-lg-3 b-select">
+							<div class="col-md-3 b-select">
 								<div class="b-select__wrap">
 									<label class="b-select__title" for="">Элемент:</label>
 									<select class="b-select__container w100" name="" id="">
@@ -487,8 +490,8 @@
 									</select>
 								</div>
 							</div>
-							<div class="col-lg-3 b-select"></div>
-							<div class="col-lg-3 b-select">
+							<div class="col-md-3 b-select"></div>
+							<div class="col-md-3 b-select">
 								<div class="b-select__wrap">
 									<label class="b-select__title" for="">Коллекции:</label>
 									<select class="b-select__container w100" name="" id="">
@@ -498,7 +501,7 @@
 									</select>
 								</div>
 							</div>
-							<div class="col-lg-3 b-select">
+							<div class="col-md-3 b-select">
 								<div class="b-select__wrap">
 									<label class="b-select__title" for="">Цвет кровли:</label>
 									<select class="b-select__container w100" name="" id="">
@@ -517,7 +520,7 @@
 						</div>
 					</form>
 					<div class="row">	
-						<div class="col-md-4 d-flex">	
+						<div class="col-4 d-flex">	
 						<div class="b-filter__sort">
 							<span class="b-filter__sort-title">Сортировать по</span>
 							<a class="b-filter__sort-link active"  href="#">цене</a>
@@ -535,7 +538,7 @@
 					</div>
 					<div class="b-shop">
 						<div class="row">
-							<div class="col-lg-4 col-md-6">
+							<div class="col-md-4">
 								<div class="b-shop__item">
 									<div class="b-shop__img">
 										<img class="b-shop__img-item" src="img/shop/shop_item.png" alt="shop_item">
@@ -589,7 +592,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 col-md-6">
+							<div class="col-md-4">
 								<div class="b-shop__item">
 									<div class="b-shop__img">
 										<img class="b-shop__img-item" src="img/shop/shop_item.png" alt="shop_item">
@@ -643,7 +646,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 col-md-6">
+							<div class="col-md-4">
 								<div class="b-shop__item">
 									<div class="b-shop__img">
 										<img class="b-shop__img-item" src="img/shop/shop_item.png" alt="shop_item">
@@ -702,8 +705,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-2"></div>
-			<div class="col-lg-10">
+			<div class="col-md-2"></div>
+			<div class="col-md-10">
 		<div class="b-navigation">
 			<a href="#" class="b-navigation__prev"></a>
 			<a class="b-navigation__link current" href="#">1</a>
@@ -717,14 +720,14 @@
 		</div>
 		<div class="row b-links">
 			<div class="col-12">
-				<div class="d-flex b-links__container">
+				<div class="d-flex">
 					<div class="b-links__block no_icon" style="background-image: url(/img/links_block.png);">
 						<a class="b-links__link" href="#"></a>
 						<span class="b-links__title">где купить</span>
 					</div>
 					<div class="b-links__block icon icon1">
 						<a class="b-links__link" href="#"></a>
-						<span class="b-links__title">расчет <br>кровли</span>
+						<span class="b-links__title">расчет<br>кровли</span>
 					</div>
 					<div class="b-links__block no_icon" style="background-image: url(img/links_block2.png);">
 						<a class="b-links__link" href="#"></a>
@@ -739,7 +742,7 @@
 						Инструкции<br> по монтажу
 					</div>
 				</div>
-				<div class="d-flex b-links__container">
+				<div class="d-flex">
 					<div class="b-links__block icon icon3">
 						<a class="b-links__link" href="#"></a>
 						<span class="b-links__title">Акции</span>
@@ -761,7 +764,7 @@
 						<span class="b-links__title">Новости</span>
 					</div>
 				</div>
-				<div class="d-flex b-links__container">
+				<div class="d-flex">
 					<div class="b-links__block no_icon" style="background-image: url(img/links_block6.png);">
 						<a class="b-links__link" href="#"></a>
 						мы в соцсетях
