--- a/app/collections.html
+++ b/app/collections.html
@@ -474,12 +474,6 @@
 								<a href="#" class="b-collections__navigation-link">Metrotile IShingle</a>
 							</div>
 						</div>
-						<div class="b-collections__navigation">
-							<div class="b-collections__navigation-head">Коллекции</div>
-							<div class="b-collections__navigation-container">
-								<a class="b-collections__navigation-link">композитная черепица</a>
-							</div>
-						</div>
 					</div>
 				</div>
 				<div class="b-catalog col-md-10">
@@ -521,6 +515,8 @@
 					</div>
 				</div>
 		</div>
+  </div>
+  <div class="container mobilefluid">
 		<div class="row gutter_top">
 				<div class="col-12">
 					<div class="b-midbanner">
@@ -529,7 +525,9 @@
 
 					</div>
 				</div>
-		</div>
+    </div>
+	</div>
+  <div class="container">
 			<div class="row align-items-center margin_top100">
 				<div class="col-md-7">
 					<div class="b-seo__title gradient text">«Пятый фасад» вашего дома</div>
@@ -543,7 +541,8 @@
 				<div class="offset-md-1 col-md-4 b-seo__image" style="background: url(img/seo_text_pic.png) no-repeat;">
 					<div class="b-seo__container"></div>
 				</div>
-			</div>			
+      </div>      
+	</div>			
 	</section>  <footer class="footer gradient_bg">
     <div class="container">
       <div class="row">
