--- a/app/contacts.html
+++ b/app/contacts.html
@@ -491,7 +491,7 @@
 
 							</div>
 							<div class="col-md-6">
-								<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab2f14a7af015bb3182fb537a387402a9a47b47a696c3fee80c9d3765495891d6&amp;source=constructor" width="570" height="400" frameborder="0"></iframe>
+								<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab2f14a7af015bb3182fb537a387402a9a47b47a696c3fee80c9d3765495891d6&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
 								<a href="#" class="b-contacts__link blue_link">Панорама яндекс</a>
 								<div class="b-contacts__container-block">
 									<div class="b-contacts__container-title margin_bot_gut">Как проехать</div>
